2009-10-19  Matthew Mundell <matthew.mundell@intevation.de>

	* omp/xml.c (compare_entities): Continue to the rest of the comparisons
	when the attributes are both NULL, instead of claiming equality.

2009-10-19  Michael Wiegand <michael.wiegand@intevation.de>

	Post-release version bump.

	* VERSION: Set to 3.0.0.beta5.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-10-19  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the openvas-libraries 3.0.0-beta4 release.

	* CHANGES: Updated.

	* VERSION: Set to 3.0.0.beta4.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-10-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/TODO: Removed old entry and clarified a bit.

2009-10-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* include/config.h.in, include/libvers.h.in, include/includes.h,
	misc/comm.h, misc/resolve.c, misc/pcap.c, misc/resolve.h,
	misc/services.h, misc/scanners_utils.c, misc/kb.c, nasl/includes.h:
	Replaced Nessus by OpenVAS.

2009-10-16  Matthew Mundell <matthew.mundell@intevation.de>

	* omp/omp.c (omp_start_task_report): New function.  Body of
	omp_start_task adjusted to return the associated report ID if requested.
	(omp_start_task): Call omp_start_task_report.

	* omp/omp.h (omp_start_task_report): New header.

2009-10-16  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* omp/xml.c, omp/xml.h (print_entity_format),
	(foreach_print_attribute_format, print_entity_format),
	(print_entities_format): New. Very basic pretty printing of xml trees.
	(foreach_print_attribute, foreach_print_entity): Declared static.

2009-10-15  Matthew Mundell <matthew.mundell@intevation.de>

	* misc/openvas_server.c (openvas_server_open, openvas_server_close)
	(openvas_server_connect, openvas_server_attach, openvas_server_send)
	(openvas_server_free): Drop SIGPIPE during writes.

2009-10-15  Matthew Mundell <matthew.mundell@intevation.de>
